refinement option 1, 2, 3, 4