@@ -1,4 +1,5 @@
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class PokemonManager {
     private Map<String, Pokemon> allPokemons;
@@ -10,29 +11,27 @@ public class PokemonManager {
     }
 
     public String agregarPokemon(String name) {
-        name = name.trim().toLowerCase();
-
         if (!allPokemons.containsKey(name)) {
             return "Error: Pokemon no encontrado.";
         }
 
         if (userCollection.containsKey(name)) {
-            return "Error: El Pokemon ya se encuentra en su coleccion.";
+            return "Error: El Pokemon ya se encuentra en su colección.";
         }
 
         userCollection.put(name, allPokemons.get(name));
-        return "Pokemon agregado a la coleccion";
+        return "¡Pokemon agregado correctamente a la coleccion!";
     }
 
     public String mostrarDatosPokemon(String name) {
         Pokemon pokemon = allPokemons.get(name);
+        
         if (pokemon == null) {
             return "Error: Pokemon no encontrado.";
         }
         return pokemon.toString();
     }
 
-    //REVISAR
     public List<Pokemon> ordenadoTipo1UserCollection() {
         return userCollection.values().stream()
                 .sorted(Comparator.comparing(Pokemon::getType1))
@@ -47,7 +46,8 @@ public class PokemonManager {
 
     public List<Pokemon> pokemonsPorHabilidad(String ability) {
         return allPokemons.values().stream()
-                .filter(p -> p.getAbilities().contains(ability))
-                .toList();
+                .filter(pokemon -> pokemon.getAbilities().contains(ability))
+                .collect(Collectors.toList());
     }
+    
 }
